--- a/public/index.html
+++ b/public/index.html
@@ -11,4 +11,5 @@
   <body>
     <div id="root"></div>
   </body>
+  <script src="https://www.reactriot.com/entries/154-furia-latina/vote.js" type="text/javascript"></script>
 </html>
